feat: Minor file refactoring and css separation

--- a/airline/templates/booking_list.html
+++ b/airline/templates/booking_list.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="d-flex justify-content-between align-items-center mt-4 mb-3">
     <h2>Bookings</h2>
-    <a href="{% url 'airline:booking_view' %}" class="btn btn-success">+ New Booking</a>
+    <a href="{% url 'airline:booking_create' %}" class="btn btn-success">+ New Booking</a>
   </div>
 
   <div class="card">
